force-app/main/default/objects/WorkOrder/fields/nepa_auto_generated__c.field-meta.xml
<CustomField>
    <fullName>nepa_auto_generated__c</fullName>
    <label>Auto Generated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when this Work Order was created by NEPA_Work_Order_Generator as part of GIS-driven team assembly. Enables idempotency: on GIS re-run, NEPA_Team_Assembly_Orchestrator cancels existing auto-generated Work Orders before creating new ones, while leaving manually created Work Orders untouched. Also used as trigger condition by NEPA_WO_Milestone_Setter to fire discipline-specific Action Plan Templates.</description>
    <inlineHelpText>Checked when this Work Order was auto-created from a GIS protection layer detection. Unchecked for manually created Work Orders.</inlineHelpText>
</CustomField>