force-app/main/default/objects/WorkOrder/fields/nepa_discipline__c.field-meta.xml
<CustomField>
    <fullName>nepa_discipline__c</fullName>
    <label>NEPA Discipline</label>
    <type>Text</type>
    <length>100</length>
    <description>Specialist discipline copied from NEPA_Layer_Discipline__mdt.Discipline__c at Work Order creation. Denormalized for direct filtering and reporting without traversing custom metadata. Also used by NEPA_WO_Milestone_Setter to look up the correct discipline-specific Action Plan Template. Example values: Hydrologist, Wildlife Biologist (Sage-Grouse), Geologist, Botanist.</description>
    <inlineHelpText>The specialist discipline this Work Order requires (e.g., Hydrologist, Geologist). Set automatically when Work Order is auto-generated from GIS detection.</inlineHelpText>
</CustomField>