force-app/main/default/objects/WorkOrder/fields/nepa_hard_gate__c.field-meta.xml
<CustomField>
    <fullName>nepa_hard_gate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this work order blocks stage advancement on the related IndividualApplication. The NEPA_Stage_Gate flow checks for any open work order with nepa_hard_gate__c = true before allowing process stage transition. Set to true by NEPA_Plaintiff_Intelligence for tribal consultation work orders and by NEPA_CE_Screener for extraordinary-circumstances work orders.</description>
    <inlineHelpText>This work order is a hard gate. The process cannot advance to the next stage until this work order is closed.</inlineHelpText>
    <label>Hard Gate</label>
    <type>Checkbox</type>
</CustomField>