force-app/main/default/objects/WorkOrder/fields/nepa_process__c.field-meta.xml
<CustomField>
    <fullName>nepa_process__c</fullName>
    <label>NEPA Process</label>
    <type>Lookup</type>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>NEPA Work Orders</relationshipLabel>
    <relationshipName>NEPA_Work_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The NEPA IndividualApplication (review process) this field-survey Work Order supports. Populated by NEPA_Work_Order_Generator at creation. Enables reporting work orders by review type, stage, and process status. Cleared (SetNull) if the IndividualApplication is deleted.</description>
    <inlineHelpText>The NEPA review process (EA, EIS, CE) this Work Order supports.</inlineHelpText>
</CustomField>