force-app/main/default/objects/WorkOrder/fields/nepa_trigger_layer__c.field-meta.xml
<CustomField>
    <fullName>nepa_trigger_layer__c</fullName>
    <label>Trigger Layer</label>
    <type>Lookup</type>
    <referenceTo>nepa_detected_protection_layer__c</referenceTo>
    <relationshipLabel>Triggered Work Orders</relationshipLabel>
    <relationshipName>Triggered_Work_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The nepa_detected_protection_layer__c record that caused this Work Order to be created. Links the field survey task back to the specific federal protection layer that triggered it. Populated by NEPA_Work_Order_Generator. Cleared (SetNull) if the detected layer record is deleted.</description>
    <inlineHelpText>The detected federal protection layer (e.g., NWI Wetlands) that triggered creation of this Work Order.</inlineHelpText>
</CustomField>